@@ -4,15 +4,18 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang.StringUtils;
 import org.slf4j.LoggerFactory;
 
 import com.logicaldoc.core.HibernatePersistentObjectDAO;
 import com.logicaldoc.core.PersistenceException;
+import com.logicaldoc.core.document.AbstractDocument;
 import com.logicaldoc.core.document.Version;
 import com.logicaldoc.core.folder.Folder;
 import com.logicaldoc.core.folder.FolderDAO;
@@ -154,19 +157,31 @@ public class HibernateVersionDAO extends HibernatePersistentObjectDAO<Version> i
 	}
 
 	private void deleteOldestVersions(List<Version> versions, int maxVersions) throws PersistenceException {
-		// Inverse order to obtain the versions ordered by descending version
-		// number
+		if (versions.size() <= maxVersions)
+			return;
+
+		// Meke sure to sort the versions by descending version spec
 		Collections.sort(versions, Collections.reverseOrder());
 
-		List<Version> oldersVersionsToDelete = versions.stream().skip(Math.max(0, versions.size() - maxVersions))
-				.toList();
-		for (Version version : oldersVersionsToDelete) {
-			jdbcUpdate("update ld_version set ld_deleted=1 where ld_id = " + version.getId());
-			jdbcUpdate("update ld_version set ld_version='"
-					+ StringUtils.right(version.getId() + "." + version.getVersion(), 10) + "' where ld_id = "
-					+ version.getId());
-		}
+		List<Version> oldestVersionsToDelete = versions.stream().skip(Math.max(0, versions.size() - maxVersions)).collect(Collectors.toList());
+		for (Version versionToDelete : oldestVersionsToDelete)
+			deleteVersion(versionToDelete, AbstractDocument.DELETED_CODE_DEFAULT);
 	}
+
+//	private void deleteOldestVersions(List<Version> versions, int maxVersions) throws PersistenceException {
+//		// Inverse order to obtain the versions ordered by descending version
+//		// number
+//		Collections.sort(versions, Collections.reverseOrder());
+//
+//		List<Version> oldersVersionsToDelete = versions.stream().skip(Math.max(0, versions.size() - maxVersions))
+//				.toList();
+//		for (Version version : oldersVersionsToDelete) {
+//			jdbcUpdate("update ld_version set ld_deleted=1 where ld_id = " + version.getId());
+//			jdbcUpdate("update ld_version set ld_version='"
+//					+ StringUtils.right(version.getId() + "." + version.getVersion(), 10) + "' where ld_id = "
+//					+ version.getId());
+//		}
+//	}
 
 	@Override
 	public void updateDigest(Version version) {
@@ -189,18 +204,21 @@ public class HibernateVersionDAO extends HibernatePersistentObjectDAO<Version> i
 
 	@Override
 	public void delete(long versionId, int delCode) throws PersistenceException {
-		if (delCode == 0)
-			throw new IllegalArgumentException("delCode cannot be 0");
-
 		if (!checkStoringAspect())
 			return;
 
 		Version ver = findById(versionId);
-		if (ver != null) {
-			ver.setDeleted(delCode);
-			ver.setVersion(StringUtils.right(versionId + "." + ver.getVersion(), 10));
-			store(ver);
-		}
+		if (ver != null)
+			deleteVersion(ver, delCode);
+	}
+
+	protected void deleteVersion(Version versionToDelete, int delCode) {
+		if (delCode == 0)
+			throw new IllegalArgumentException("delCode cannot be 0");
+		versionToDelete.setDeleted(delCode);
+		versionToDelete.setLastModified(new Date());
+		versionToDelete.setVersion(StringUtils.right(versionToDelete.getId() + "." + versionToDelete.getVersion(), 10));
+		saveOrUpdate(versionToDelete);
 	}
 
 	public void setFolderDAO(FolderDAO folderDAO) {
